# SplinePSF

./: .bumpversion.cfg  .gitignore  README.md  environment.yml
.github/workflows/: build-upload.yaml  build-upload.yml  build_upload_test.yaml  check_cuda.yaml
cpp_cuda_c/: CMakeLists.txt
cpp_cuda_c/include/: spline_psf.h  spline_psf_gpu.cuh
cpp_cuda_c/src/: pybind_spline.cpp  spline_psf.c  spline_psf_gpu.cu
dist_tools/conda/: =1.5  conda_build_config.yaml
dist_tools/conda/spline/: bld.bat  build.sh  meta.yaml
python/: environment.yml  setup.py
python/test/: test_basic.py
